--- a/notebook/data_format.py.ipynb
+++ b/notebook/data_format.py.ipynb
@@ -7322,52 +7322,516 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "d785ce85",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Dictx():\n",
-    "\n",
-    "    def __init__(self, *a, **s):\n",
-    "        self.index = [1,2,3]\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return len(self.index)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "x = Dictx(x=1, y=2, z=3)\n",
-    "\n",
-    "\n",
-    "len(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "17d72181",
    "metadata": {},
    "outputs": [],
    "source": [
-    "/ai/223/person/lichunyu/models/df/intent/bert-2021-08-13-02-54-15-f1_98.pth"
+    "df_9_com = pd.read_pickle('/root/hub/EDA_NLP_for_Chinese/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "c8992de6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>还有 双鸭山 到 13 的 汽车票 吗 淮阴 号 的</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>还有 双鸭山 到 淮阴 的 口属 吗 13 号 的</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>通辽 还有 双鸭山 到 淮阴 的 汽车票 吗 13 号 的</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>还有 双鸭山 到 淮阴 的 汽车票 吗 13 号 的</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>还有 双鸭山 到 淮阴 的 汽车票 吗 13 号 的</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44994</th>\n",
+       "      <td>给 我 看看 北京 飞 上海 的 飞机 已经 起飞 了 吗</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44995</th>\n",
+       "      <td>郑州 我 导航 一下 合肥 到 帮 的 路线 怎么走 。</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44996</th>\n",
+       "      <td>帮 导航 一下 合肥 到 郑州 的 路线 。</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44997</th>\n",
+       "      <td>帮 我 导航 一下 合肥 到 郑州 的 路廊 怎么走 。</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44998</th>\n",
+       "      <td>帮 我 导航 一下 怎么走 到 郑州 的 路线 合肥 。</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>44999 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                text  label\n",
+       "0         还有 双鸭山 到 13 的 汽车票 吗 淮阴 号 的      2\n",
+       "1          还有 双鸭山 到 淮阴 的 口属 吗 13 号 的      2\n",
+       "2      通辽 还有 双鸭山 到 淮阴 的 汽车票 吗 13 号 的      2\n",
+       "3         还有 双鸭山 到 淮阴 的 汽车票 吗 13 号 的      2\n",
+       "4         还有 双鸭山 到 淮阴 的 汽车票 吗 13 号 的      2\n",
+       "...                              ...    ...\n",
+       "44994  给 我 看看 北京 飞 上海 的 飞机 已经 起飞 了 吗      2\n",
+       "44995   郑州 我 导航 一下 合肥 到 帮 的 路线 怎么走 。      2\n",
+       "44996         帮 导航 一下 合肥 到 郑州 的 路线 。      2\n",
+       "44997   帮 我 导航 一下 合肥 到 郑州 的 路廊 怎么走 。      2\n",
+       "44998   帮 我 导航 一下 怎么走 到 郑州 的 路线 合肥 。      2\n",
+       "\n",
+       "[44999 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_ = {\n",
+    "    'text': [],\n",
+    "    'label': []\n",
+    "}\n",
+    "with open('/root/hub/EDA_NLP_for_Chinese/df_intent_common_aug.txt', 'r') as f:\n",
+    "    com_list = f.read().splitlines()\n",
+    "for i in com_list[:-1]:\n",
+    "    _['text'].append(i.split('\\t')[-1])\n",
+    "    _['label'].append(int(i.split('\\t')[0]))\n",
+    "    \n",
+    "df_9_new_com = pd.DataFrame(_)\n",
+    "df_9_new_com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "94bdc678",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>想看一下今天的南海海洋天气预报，给我调到南海吧</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>帮我搜索一下CCTV2的一槌定音</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>278</th>\n",
+       "      <td>上午电视演的的都市朋友圈都讲了些什么我想看下</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>3月18日那天电影台有啥电影好看，帮我看下</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>871</th>\n",
+       "      <td>我想再回味一遍周三凌晨一点播放的平民英雄</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11174</th>\n",
+       "      <td>查找 中央台 在 中央台 播出 的 廊桥遗梦</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11175</th>\n",
+       "      <td>查找 在 中央台 播出 的 廊桥遗梦</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11176</th>\n",
+       "      <td>查找 在 中央台 播出 的 因于 廊桥遗梦</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11177</th>\n",
+       "      <td>查找 重播 在 中央台 播出 的 廊桥遗梦</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11178</th>\n",
+       "      <td>查找 在 中央台 播出 的 廊桥遗梦</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          text label\n",
+       "165    想看一下今天的南海海洋天气预报，给我调到南海吧     8\n",
+       "253           帮我搜索一下CCTV2的一槌定音     8\n",
+       "278     上午电视演的的都市朋友圈都讲了些什么我想看下     8\n",
+       "329      3月18日那天电影台有啥电影好看，帮我看下     8\n",
+       "871       我想再回味一遍周三凌晨一点播放的平民英雄     8\n",
+       "...                        ...   ...\n",
+       "11174   查找 中央台 在 中央台 播出 的 廊桥遗梦     8\n",
+       "11175       查找 在 中央台 播出 的 廊桥遗梦     8\n",
+       "11176    查找 在 中央台 播出 的 因于 廊桥遗梦     8\n",
+       "11177    查找 重播 在 中央台 播出 的 廊桥遗梦     8\n",
+       "11178       查找 在 中央台 播出 的 廊桥遗梦     8\n",
+       "\n",
+       "[1100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_8_9 = pd.read_pickle('/root/EarleeNLP/data/datafountain/df_few_shot_aug.pkl')\n",
+    "df_8 = df_8_9.loc[df_8_9['label']==8]\n",
+    "df_8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "96fa94c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>给我找个雨果的小说来放</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>现在请播放宇尘的悬疑小说无罪谋杀</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>207</th>\n",
+       "      <td>广播剧默读的预告帮我播放</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>讲一下打火匣的故事英文版的</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>713</th>\n",
+       "      <td>恋爱题材的有声小说随便播一个吧</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11195</th>\n",
+       "      <td>想 听 奥斯丁 的 傲慢 与 偏见 英语版</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11196</th>\n",
+       "      <td>想 听 奥斯丁 的 傲慢 与 偏见 英文版</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11197</th>\n",
+       "      <td>不想 听 奥斯丁 的 傲慢 与 偏见 英文版</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11198</th>\n",
+       "      <td>想 听 奥斯丁 的 傲慢 与 偏见 英文版</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11199</th>\n",
+       "      <td>想 听 奥斯丁 的 傲慢 与 偏见 英文版</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         text label\n",
+       "176               给我找个雨果的小说来放     9\n",
+       "189          现在请播放宇尘的悬疑小说无罪谋杀     9\n",
+       "207              广播剧默读的预告帮我播放     9\n",
+       "363             讲一下打火匣的故事英文版的     9\n",
+       "713           恋爱题材的有声小说随便播一个吧     9\n",
+       "...                       ...   ...\n",
+       "11195   想 听 奥斯丁 的 傲慢 与 偏见 英语版     9\n",
+       "11196   想 听 奥斯丁 的 傲慢 与 偏见 英文版     9\n",
+       "11197  不想 听 奥斯丁 的 傲慢 与 偏见 英文版     9\n",
+       "11198   想 听 奥斯丁 的 傲慢 与 偏见 英文版     9\n",
+       "11199   想 听 奥斯丁 的 傲慢 与 偏见 英文版     9\n",
+       "\n",
+       "[1100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_9 = df_8_9.loc[df_8_9['label']==9]\n",
+    "df_9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "44715ead",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>想看一下今天的南海海洋天气预报，给我调到南海吧</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>帮我搜索一下CCTV2的一槌定音</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>上午电视演的的都市朋友圈都讲了些什么我想看下</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3月18日那天电影台有啥电影好看，帮我看下</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>我想再回味一遍周三凌晨一点播放的平民英雄</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47194</th>\n",
+       "      <td>给 我 看看 北京 飞 上海 的 飞机 已经 起飞 了 吗</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47195</th>\n",
+       "      <td>郑州 我 导航 一下 合肥 到 帮 的 路线 怎么走 。</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47196</th>\n",
+       "      <td>帮 导航 一下 合肥 到 郑州 的 路线 。</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47197</th>\n",
+       "      <td>帮 我 导航 一下 合肥 到 郑州 的 路廊 怎么走 。</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47198</th>\n",
+       "      <td>帮 我 导航 一下 怎么走 到 郑州 的 路线 合肥 。</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>47199 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                text label\n",
+       "0            想看一下今天的南海海洋天气预报，给我调到南海吧     8\n",
+       "1                   帮我搜索一下CCTV2的一槌定音     8\n",
+       "2             上午电视演的的都市朋友圈都讲了些什么我想看下     8\n",
+       "3              3月18日那天电影台有啥电影好看，帮我看下     8\n",
+       "4               我想再回味一遍周三凌晨一点播放的平民英雄     8\n",
+       "...                              ...   ...\n",
+       "47194  给 我 看看 北京 飞 上海 的 飞机 已经 起飞 了 吗     2\n",
+       "47195   郑州 我 导航 一下 合肥 到 帮 的 路线 怎么走 。     2\n",
+       "47196         帮 导航 一下 合肥 到 郑州 的 路线 。     2\n",
+       "47197   帮 我 导航 一下 合肥 到 郑州 的 路廊 怎么走 。     2\n",
+       "47198   帮 我 导航 一下 怎么走 到 郑州 的 路线 合肥 。     2\n",
+       "\n",
+       "[47199 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new_intent = pd.concat([df_8, df_9, df_9_new_com])\n",
+    "df_new_intent = df_new_intent.reset_index(drop=True)\n",
+    "df_new_intent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "3ffc9953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new_intent.to_pickle('/root/EarleeNLP/data/datafountain/df_all_aug.pkl')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8992de6",
+   "id": "7f8c3301",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7375,7 +7839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94bdc678",
+   "id": "33c0360c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7383,7 +7847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96fa94c2",
+   "id": "39b749d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7391,7 +7855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44715ead",
+   "id": "1e2b2e25",
    "metadata": {},
    "outputs": [],
    "source": []
