--- a/notebook/hebin.ipynb
+++ b/notebook/hebin.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 104,
    "id": "81ac8bb2",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,8 @@
        "  'slots': {'channel': '中央14', 'name': '西游记'}},\n",
        " 'NLU00054': {'intent': 'HomeAppliance-Control',\n",
        "  'slots': {'appliance': '空调', 'details': '自动模式', 'command': '模式调节'}},\n",
-       " 'NLU00055': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00055': {'intent': 'Travel-Query',\n",
+       "  'slots': {'departure': '香山', 'destination': '天坛公园', 'query_type': '导航'}},\n",
        " 'NLU00056': {'intent': 'Audio-Play', 'slots': {'name': '微微一笑很倾城'}},\n",
        " 'NLU00057': {'intent': 'TVProgram-Play',\n",
        "  'slots': {'name': '换了人间-（四套）-16/40', 'channel': ['C', '4']}},\n",
@@ -147,7 +148,8 @@
        " 'NLU00075': {'intent': 'Music-Play',\n",
        "  'slots': {'artist': '姜云升', 'song': '起点'}},\n",
        " 'NLU00076': {'intent': 'Other', 'slots': {}},\n",
-       " 'NLU00077': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00077': {'intent': 'Music-Play',\n",
+       "  'slots': {'age': '九十年代', 'artist': '邰正宵', 'song': '九百九十九朵玫瑰'}},\n",
        " 'NLU00078': {'intent': 'Alarm-Update',\n",
        "  'slots': {'datetime_date': '星期一',\n",
        "   'datetime_time': '早上8',\n",
@@ -275,7 +277,9 @@
        " 'NLU00148': {'intent': 'Calendar-Query',\n",
        "  'slots': {'datetime_date': '阴历1月1日'}},\n",
        " 'NLU00149': {'intent': 'Video-Play',\n",
-       "  'slots': {'datetime_date': '2020年5月9日', 'name': '周杰伦在海口开演唱会的视频'}},\n",
+       "  'slots': {'datetime_date': '2020年5月9日',\n",
+       "   'name': '周杰伦在海口开演唱会的视频',\n",
+       "   'region': '海口'}},\n",
        " 'NLU00150': {'intent': 'Video-Play',\n",
        "  'slots': {'datetime_date': '今年', 'name': '香肠派对游戏视频讲解'}},\n",
        " 'NLU00151': {'intent': 'Audio-Play',\n",
@@ -347,7 +351,7 @@
        "   'destination': '长春',\n",
        "   'query_type': '机票查询'}},\n",
        " 'NLU00188': {'intent': 'Weather-Query',\n",
-       "  'slots': {'city': '山西', 'datetime_date': '下周', 'index': '降水量', 'type': '雨'}},\n",
+       "  'slots': {'city': '山西', 'datetime_date': '下周', 'type': '雨'}},\n",
        " 'NLU00189': {'intent': 'Travel-Query',\n",
        "  'slots': {'destination': '贵阳', 'query_type': '汽车票查询'}},\n",
        " 'NLU00190': {'intent': 'Other', 'slots': {}},\n",
@@ -356,16 +360,16 @@
        " 'NLU00193': {'intent': 'Audio-Play', 'slots': {'artist': '王昌龄'}},\n",
        " 'NLU00194': {'intent': 'Video-Play',\n",
        "  'slots': {'datetime_date': '2021年',\n",
-       "   'name': ['跨年晚会上', '杨幂和周笔畅一起演唱了世间美好与你环环相扣的视频']}},\n",
-       " 'NLU00195': {'intent': 'Video-Play',\n",
-       "  'slots': {'name': ['一人之下中', '王也和张楚岚对战的片段']}},\n",
+       "   'name': '跨年晚会上杨幂和周笔畅一起演唱了世间美好与你环环相扣的视频'}},\n",
+       " 'NLU00195': {'intent': 'Video-Play', 'slots': {'name': '一人之下中王也和张楚岚对战的片段'}},\n",
        " 'NLU00196': {'intent': 'Music-Play', 'slots': {'age': '2016年'}},\n",
        " 'NLU00197': {'intent': 'Other', 'slots': {}},\n",
        " 'NLU00198': {'intent': 'Music-Play',\n",
        "  'slots': {'artist': '沈文裕', 'instrument': '钢琴'}},\n",
        " 'NLU00199': {'intent': 'Travel-Query',\n",
        "  'slots': {'destination': '丽江', 'query_type': '火车票查询'}},\n",
-       " 'NLU00200': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00200': {'intent': 'TVProgram-Play',\n",
+       "  'slots': {'channel': '重庆卫视', 'datetime_time': '凌晨', 'name': '新世界'}},\n",
        " 'NLU00201': {'intent': 'Alarm-Update',\n",
        "  'slots': {'datetime_date': '14号', 'notes': '回学校打卡'}},\n",
        " 'NLU00202': {'intent': 'Radio-Listen',\n",
@@ -405,7 +409,12 @@
        "  'slots': {'name': '今日西安', 'region': '西安'}},\n",
        " 'NLU00227': {'intent': 'Travel-Query',\n",
        "  'slots': {'departure': '龙岩', 'datetime_date': '今天', 'query_type': '火车票查询'}},\n",
-       " 'NLU00228': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00228': {'intent': 'Music-Play',\n",
+       "  'slots': {'artist': '郭富城',\n",
+       "   'age': '90年代',\n",
+       "   'album': '由零开始',\n",
+       "   'song': '对你爱不完',\n",
+       "   'play_mode': '单曲循环'}},\n",
        " 'NLU00229': {'intent': 'Video-Play',\n",
        "  'slots': {'region': '韩国', 'name': '乐园之夜的预告片'}},\n",
        " 'NLU00230': {'intent': 'Audio-Play', 'slots': {'artist': '柳宗元'}},\n",
@@ -504,8 +513,9 @@
        "  'slots': {'name': '装在套子里的人', 'language': '法语'}},\n",
        " 'NLU00281': {'intent': 'Radio-Listen',\n",
        "  'slots': {'frequency': '一零六点九', 'channel': '陈末电台'}},\n",
-       " 'NLU00282': {'intent': 'Other', 'slots': {}},\n",
-       " 'NLU00283': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00282': {'intent': 'Alarm-Update', 'slots': {'notes': ['老妈', '吃饭']}},\n",
+       " 'NLU00283': {'intent': 'Travel-Query',\n",
+       "  'slots': {'destination': ['福建省', '离廉江'], 'query_type': '导航'}},\n",
        " 'NLU00284': {'intent': 'TVProgram-Play', 'slots': {'datetime_date': '元宵节'}},\n",
        " 'NLU00285': {'intent': 'Other', 'slots': {}},\n",
        " 'NLU00286': {'intent': 'Music-Play',\n",
@@ -592,7 +602,7 @@
        "  'slots': {'region': '英国', 'tag': '恐怖'}},\n",
        " 'NLU00336': {'intent': 'Music-Play',\n",
        "  'slots': {'artist': '张韶涵', 'song': '隐形的翅膀'}},\n",
-       " 'NLU00337': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00337': {'intent': 'FilmTele-Play', 'slots': {'artist': '张小娴'}},\n",
        " 'NLU00338': {'intent': 'Audio-Play',\n",
        "  'slots': {'play_setting': ['续播', '第三章'], 'name': ['假如给', '三天时间']}},\n",
        " 'NLU00339': {'intent': 'Alarm-Update',\n",
@@ -675,7 +685,7 @@
        "  'slots': {'frequency': 'FM102点7', 'channel': '广州音乐之声'}},\n",
        " 'NLU00387': {'intent': 'Audio-Play', 'slots': {'tag': ['悬疑', '恐怖']}},\n",
        " 'NLU00388': {'intent': 'Weather-Query',\n",
-       "  'slots': {'datetime_date': '下周', 'city': '山东', 'index': '降水量', 'type': '雨'}},\n",
+       "  'slots': {'datetime_date': '下周', 'city': '山东', 'type': '雨'}},\n",
        " 'NLU00389': {'intent': 'FilmTele-Play',\n",
        "  'slots': {'artist': ['姜文', '葛优'], 'name': '让子弹飞'}},\n",
        " 'NLU00390': {'intent': 'Music-Play', 'slots': {'age': '90年代'}},\n",
@@ -692,7 +702,8 @@
        "  'slots': {'datetime_time': '中午', 'notes': '回家洗衣服'}},\n",
        " 'NLU00396': {'intent': 'Calendar-Query', 'slots': {'datetime_date': '8号'}},\n",
        " 'NLU00397': {'intent': 'Calendar-Query', 'slots': {'datetime_date': '端午节'}},\n",
-       " 'NLU00398': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00398': {'intent': 'FilmTele-Play',\n",
+       "  'slots': {'artist': ['陈伟霆', '马思纯'], 'name': '橙红年代'}},\n",
        " 'NLU00399': {'intent': 'Radio-Listen',\n",
        "  'slots': {'frequency': '九四点九', 'channel': '扬州人民广播电台经济台'}},\n",
        " 'NLU00400': {'intent': 'Audio-Play', 'slots': {'artist': '辛弃疾'}},\n",
@@ -800,7 +811,8 @@
        " 'NLU00458': {'intent': 'Other', 'slots': {}},\n",
        " 'NLU00459': {'intent': 'Audio-Play', 'slots': {'tag': '仙侠'}},\n",
        " 'NLU00460': {'intent': 'Video-Play', 'slots': {'name': '王者荣耀的解说视频'}},\n",
-       " 'NLU00461': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00461': {'intent': 'Audio-Play',\n",
+       "  'slots': {'play_setting': ['续播', '第三章'], 'name': '双城记'}},\n",
        " 'NLU00462': {'intent': 'Calendar-Query', 'slots': {'datetime_date': '明天'}},\n",
        " 'NLU00463': {'intent': 'Video-Play',\n",
        "  'slots': {'name': '王凯在', 'datetime_date': '2020年参加的跨界歌王第三季唱歌的合辑视频'}},\n",
@@ -859,7 +871,8 @@
        "  'slots': {'channel': '中央五', 'name': 'CBA总决赛'}},\n",
        " 'NLU00499': {'intent': 'FilmTele-Play',\n",
        "  'slots': {'region': '大陆', 'tag': ['仙侠', '花千骨']}},\n",
-       " 'NLU00500': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00500': {'intent': 'Travel-Query',\n",
+       "  'slots': {'destination': '浒关敬恩学校', 'query_type': '导航'}},\n",
        " 'NLU00501': {'intent': 'Weather-Query',\n",
        "  'slots': {'datetime_date': '未来一周', 'city': '吉林', 'type': '雪'}},\n",
        " 'NLU00502': {'intent': 'Other', 'slots': {}},\n",
@@ -906,14 +919,14 @@
        "  'slots': {'datetime_date': '过两天', 'type': '雪'}},\n",
        " 'NLU00526': {'intent': 'FilmTele-Play',\n",
        "  'slots': {'name': '我的小确幸', 'play_setting': '大结局'}},\n",
-       " 'NLU00527': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00527': {'intent': 'FilmTele-Play', 'slots': {'name': '凤弈'}},\n",
        " 'NLU00528': {'intent': 'Video-Play', 'slots': {'name': '邻家女孩大斗爱'}},\n",
-       " 'NLU00529': {'intent': 'Calendar-Query', 'slots': {}},\n",
+       " 'NLU00529': {'intent': 'Other', 'slots': {}},\n",
        " 'NLU00530': {'intent': 'Alarm-Update',\n",
        "  'slots': {'datetime_date': '明天', 'datetime_time': '下午3点', 'notes': '出发去机场'}},\n",
        " 'NLU00531': {'intent': 'TVProgram-Play',\n",
        "  'slots': {'channel': '乐频道', 'name': '神龙策2'}},\n",
-       " 'NLU00532': {'intent': 'FilmTele-Play', 'slots': {'name': ['珠江的', '第九个寡妇']}},\n",
+       " 'NLU00532': {'intent': 'FilmTele-Play', 'slots': {'name': '珠江的第九个寡妇'}},\n",
        " 'NLU00533': {'intent': 'Calendar-Query', 'slots': {'datetime_date': '泼水节'}},\n",
        " 'NLU00534': {'intent': 'Travel-Query', 'slots': {'query_type': '火车票查询'}},\n",
        " 'NLU00535': {'intent': 'Alarm-Update',\n",
@@ -936,7 +949,7 @@
        "  'slots': {'destination': '长安街', 'query_type': '导航'}},\n",
        " 'NLU00546': {'intent': 'TVProgram-Play',\n",
        "  'slots': {'datetime_time': '凌晨两点', 'name': '新闻大求真'}},\n",
-       " 'NLU00547': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00547': {'intent': 'Audio-Play', 'slots': {}},\n",
        " 'NLU00548': {'intent': 'Video-Play',\n",
        "  'slots': {'region': '印度', 'name': '起跑线'}},\n",
        " 'NLU00549': {'intent': 'Calendar-Query',\n",
@@ -1414,7 +1427,7 @@
        "  'slots': {'artist': '景向谁依', 'tag': '悬疑'}},\n",
        " 'NLU00825': {'intent': 'TVProgram-Play',\n",
        "  'slots': {'channel': '云南少儿', 'name': '宝贝爱动画'}},\n",
-       " 'NLU00826': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00826': {'intent': 'TVProgram-Play', 'slots': {'name': '喜羊羊嘻哈闯世界'}},\n",
        " 'NLU00827': {'intent': 'Calendar-Query', 'slots': {'datetime_date': '浴佛节'}},\n",
        " 'NLU00828': {'intent': 'FilmTele-Play',\n",
        "  'slots': {'name': '刺杀小说家', 'tag': '悬疑'}},\n",
@@ -1467,7 +1480,7 @@
        "  'slots': {'song': '告白气球', 'play_mode': '单曲循环'}},\n",
        " 'NLU00855': {'intent': 'TVProgram-Play',\n",
        "  'slots': {'channel': '湖南卫视', 'datetime_date': '今天', 'name': '鲜厨100第二季'}},\n",
-       " 'NLU00856': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00856': {'intent': 'Alarm-Update', 'slots': {'datetime_date': '明天'}},\n",
        " 'NLU00857': {'intent': 'FilmTele-Play',\n",
        "  'slots': {'age': '90年代', 'tag': '战争'}},\n",
        " 'NLU00858': {'intent': 'Video-Play',\n",
@@ -1531,7 +1544,8 @@
        "  'slots': {'region': '美国', 'name': '美国队长'}},\n",
        " 'NLU00890': {'intent': 'Travel-Query',\n",
        "  'slots': {'destination': '漳州', 'query_type': '导航'}},\n",
-       " 'NLU00891': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00891': {'intent': 'Travel-Query',\n",
+       "  'slots': {'destination': '中国国家博物馆', 'query_type': '导航'}},\n",
        " 'NLU00892': {'intent': 'Music-Play', 'slots': {'play_mode': '随机播放'}},\n",
        " 'NLU00893': {'intent': 'Audio-Play',\n",
        "  'slots': {'artist': '雨果', 'name': '巴黎圣母院', 'language': '英语'}},\n",
@@ -1593,7 +1607,11 @@
        "  'slots': {'appliance': '小夜灯', 'command': '关机'}},\n",
        " 'NLU00928': {'intent': 'HomeAppliance-Control',\n",
        "  'slots': {'appliance': '电动牙刷', 'command': '开机'}},\n",
-       " 'NLU00929': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00929': {'intent': 'Weather-Query',\n",
+       "  'slots': {'city': '峨眉山市',\n",
+       "   'datetime_date': '星期一',\n",
+       "   'datetime_time': '早上八点半',\n",
+       "   'index': '穿衣指数'}},\n",
        " 'NLU00930': {'intent': 'Audio-Play',\n",
        "  'slots': {'play_setting': ['续播', '第五'], 'artist': '沈从文', 'name': '边城'}},\n",
        " 'NLU00931': {'intent': 'Other', 'slots': {}},\n",
@@ -1610,7 +1628,7 @@
        "  'slots': {'frequency': '九零点六', 'channel': '三水电台'}},\n",
        " 'NLU00938': {'intent': 'Video-Play',\n",
        "  'slots': {'datetime_date': '2020年',\n",
-       "   'name': ['腾格尔', '杨幂', '王晨艺在湖南跨年晚会上唱的', '野狼disco'],\n",
+       "   'name': '腾格尔杨幂王晨艺在湖南跨年晚会上唱的野狼disco',\n",
        "   'region': '湖南'}},\n",
        " 'NLU00939': {'intent': 'Other', 'slots': {}},\n",
        " 'NLU00940': {'intent': 'FilmTele-Play',\n",
@@ -1639,7 +1657,7 @@
        "  'slots': {'datetime_date': '明天', 'datetime_time': '晚上7点', 'notes': '扫院子'}},\n",
        " 'NLU00953': {'intent': 'Weather-Query',\n",
        "  'slots': {'datetime_date': '未来三天', 'city': '芜湖'}},\n",
-       " 'NLU00954': {'intent': 'Other', 'slots': {}},\n",
+       " 'NLU00954': {'intent': 'Radio-Listen', 'slots': {}},\n",
        " 'NLU00955': {'intent': 'Music-Play', 'slots': {}},\n",
        " 'NLU00956': {'intent': 'Alarm-Update',\n",
        "  'slots': {'datetime_date': '明天', 'notes': '打印东西'}},\n",
@@ -1691,8 +1709,7 @@
        " 'NLU00986': {'intent': 'Other', 'slots': {}},\n",
        " 'NLU00987': {'intent': 'HomeAppliance-Control',\n",
        "  'slots': {'appliance': '电饭煲', 'command': '开机'}},\n",
-       " 'NLU00988': {'intent': 'Video-Play',\n",
-       "  'slots': {'name': ['CCTV2的', '第一时间往期视频']}},\n",
+       " 'NLU00988': {'intent': 'Video-Play', 'slots': {'name': 'CCTV2的第一时间往期视频'}},\n",
        " 'NLU00989': {'intent': 'Audio-Play', 'slots': {'name': '三只小猪'}},\n",
        " 'NLU00990': {'intent': 'Music-Play', 'slots': {'song': '两棵树'}},\n",
        " 'NLU00991': {'intent': 'Weather-Query',\n",
@@ -1704,7 +1721,7 @@
        " 'NLU00995': {'intent': 'Audio-Play',\n",
        "  'slots': {'artist': '普希金', 'name': '渔夫和金鱼', 'language': '英语'}},\n",
        " 'NLU00996': {'intent': 'Weather-Query',\n",
-       "  'slots': {'city': '长沙', 'datetime_date': '9月', 'index': '降水量', 'type': '雨'}},\n",
+       "  'slots': {'city': '长沙', 'datetime_date': '9月', 'index': '降水量'}},\n",
        " 'NLU00997': {'intent': 'Music-Play', 'slots': {'language': '英语'}},\n",
        " 'NLU00998': {'intent': 'Alarm-Update',\n",
        "  'slots': {'datetime_time': '中午12点', 'notes': '去食堂吃午饭'}},\n",
@@ -1712,19 +1729,19 @@
        " ...}"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output = json.load(open('output.json'))\n",
+    "output = json.load(open('name_combain.json'))\n",
     "output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "id": "d5885d33",
    "metadata": {},
    "outputs": [
@@ -3481,7 +3498,7 @@
        " ...}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4515,73 +4532,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
    "id": "83cf5ba5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "帮我播放正在直播的国际足球赛场-20-21赛季意甲联赛第38轮1\n",
-      "乐思购物直播节目是在今天十八点播放吗帮我看下\n",
-      "微微一笑很倾城的有声漫画帮我播一下\n",
-      "可以帮我找找今天播放的盛唐幻夜在哪个吗我想看下\n",
-      "中午11点40分的DV现场给我回放下吧\n",
-      "让我看下2002年的乌龙闯情关里面的小鲜肉\n",
-      "我要看鬼畜剧场里的全明星手术室\n",
-      "往期视频第二战场-2019-15在国防军事查看一下\n",
-      "5月26上午播出的兵器面面观-2021-90回放一下\n",
-      "正点财经在哪个频道播出？往期视频回放一下啊\n",
-      "天字号密令1点38播出的视频帮我查看一下\n",
-      "播放不要忘记我爱你这个音乐MV吧\n",
-      "人口-2021-21在CCTV1的视频查找一下\n",
-      "在7点59播出的综艺喜乐汇-2021-586回播一下\n",
-      "我想看辽宁体育的体育赛事帮我打开一下吧\n",
-      "通灵妃的有声漫画帮我播一下\n",
-      "搞笑类的有声漫画给我播一个\n",
-      "打开下午三点十分播放的步步惊奇真情版\n",
-      "推理类的有声漫画给我播一个\n",
-      "快点找出来电视剧鹿鼎记的韦小宝cut\n",
-      "给我打开今天播放过的战天狼第四集\n",
-      "给我立刻搜索今天的熊出没\n",
-      "言情有声漫画播一个给我\n",
-      "搜索社会与法频道播出的法律大讲堂往期视频\n",
-      "星期四的优漫星未来还能看回放吗帮我看下\n",
-      "今天的新闻有什么奇葩的新闻吗我想看下\n",
-      "广播剧默读的花絮帮我播一下\n",
-      "昨天零点27的综艺喜乐汇-2020-275视频帮我查找一下\n",
-      "可以帮我找找今天播放的盛唐幻夜在哪个吗我想看下\n",
-      "5月22日播放的法治第一线今天有重播吧\n",
-      "我想看新闻频道的法制在线帮我回放一下往期视频\n",
-      "麻烦打开一下上周五凌晨五点广东卡通播过的卡通动画吧\n",
-      "回放一下5月26上午播出的远方的家2021-53\n",
-      "回放广州竞赛今天零点的体坛点击吧我想看下\n",
-      "十点半的环球综艺有什么综艺看\n",
-      "搞笑有声漫画播一个给我\n",
-      "我女儿要看樱桃小丸子\n",
-      "九点半看湖南的新闻联播\n",
-      "帮我重播昨天的体育的说唱CBA\n",
-      "零点已经播出的顶级赛事-围棋回看一下\n",
-      "5月26日CCTV1在2点31精彩一刻-2020-186新航拍中国湖南洞庭湖视频回放一下\n",
-      "给我打开爆笑吃鸡教你如何一刀5人的游戏教学视频\n",
-      "回放前天凌晨两点零五分播放的我最爱的电视剧七十二家房客吧\n",
-      "给我播放惊悚类的有声漫画\n",
-      "护国军魏传奇今天晚上19.00开播吗帮我看下\n",
-      "天官赐福的有声漫画帮我播一下\n",
-      "我想看北京卫视的北京您早帮我搜索一下往期视频\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['NLU00226', 'NLU02225']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "res = []\n",
     "for idx, info_dict in submit.items():\n",
-    "    intent = info_dict['intent']\n",
-    "    if intent == 'Video-Play' and output[idx]['intent'] != 'Video-Play':\n",
+    "    if 'region' not in info_dict['slots'] and 'region' in output[idx]['slots']:\n",
     "        res.append(idx)\n",
-    "        \n",
-    "for i in res:\n",
-    "    print(test_a_text[i]['text'])"
+    "\n",
+    "res"
    ]
   },
   {
