model inference optimization

--- a/notebook/ood.ipynb
+++ b/notebook/ood.ipynb
@@ -22416,6 +22416,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "id": "9f5e82bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'s'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_6851/2351427746.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m's'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 's'"
+     ]
+    }
+   ],
+   "source": [
+    "a = {}i\n",
+    "a.pop('s')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 50,
    "id": "87514dff",
    "metadata": {},
@@ -22430,9 +22453,7 @@
    "id": "5a265ee1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from collections import defaultdict"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
