--- a/notebook/detach_data_process.ipynb
+++ b/notebook/detach_data_process.ipynb
@@ -34944,7 +34944,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "1ca5bb5d",
+   "id": "17fc94a9",
    "metadata": {},
    "outputs": [
     {
@@ -38717,7 +38717,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "74e375ad",
+   "id": "2631aa89",
    "metadata": {},
    "outputs": [
     {
@@ -42490,7 +42490,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "ec34d1a5",
+   "id": "5f56c652",
    "metadata": {},
    "outputs": [
     {
@@ -46285,7 +46285,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "8e127899",
+   "id": "8a726f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46295,7 +46295,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "38405c9b",
+   "id": "58226d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46307,7 +46307,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ac96f37d",
+   "id": "619f4f88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46319,7 +46319,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "4c062d29",
+   "id": "fceeb95e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46335,9 +46335,9 @@
    "source": [
     "# BIO \n",
     "\n",
-    "intent_name = 'date_and_time_clean'\n",
+    "intent_name = 'Alarm-Update'\n",
     "\n",
-    "# data = json.load(open('data_detached/{}_detached.json'.format(intent_name)))\n",
+    "data = json.load(open('data_detached/{}_detached.json'.format(intent_name)))\n",
     "\n",
     "\n",
     "nested_ner_num = 0\n",
@@ -46355,8 +46355,8 @@
     "    default_label = len(text) * ['O']\n",
     "    feasible_mark = True\n",
     "    for slot_k, slot_value in slots.items():\n",
-    "        if slot_k not in ['datetime_date', 'datetime_time']:\n",
-    "            continue\n",
+    "#         if slot_k not in ['datetime_date', 'datetime_time']:\n",
+    "#             continue\n",
     "        \n",
     "        if slot_k in ['query_type', 'play_mode', 'command', 'index', 'language', 'type', 'region']:\n",
     "            continue\n",
@@ -46425,14 +46425,14 @@
     "\n",
     "\n",
     "\n",
-    "with open('/ai/223/person/lichunyu/datasets/dataf/seq_label/{}_detached.train'.format(intent_name), 'w') as f:\n",
+    "with open('/ai/223/person/lichunyu/datasets/dataf/seq_label/{}_detached_clean.train'.format(intent_name), 'w') as f:\n",
     "    for idx in range(len(train_seq_normalization_text)):\n",
     "        for char_idx in range(len(train_seq_normalization_text[idx])):\n",
     "                if train_seq_normalization_text[idx][char_idx] and train_seq_normalization_text[idx][char_idx] != ' ':\n",
     "                    f.write(train_seq_normalization_text[idx][char_idx] + '\\t' + train_seq_label[idx][char_idx] + '\\n')\n",
     "        f.write('\\n')\n",
     "        \n",
-    "with open('/ai/223/person/lichunyu/datasets/dataf/seq_label/{}_detached.test'.format(intent_name), 'w') as f:\n",
+    "with open('/ai/223/person/lichunyu/datasets/dataf/seq_label/{}_detached_clean.test'.format(intent_name), 'w') as f:\n",
     "    for idx in range(len(test_seq_normalization_text)):\n",
     "        for char_idx in range(len(test_seq_normalization_text[idx])):\n",
     "            if test_seq_normalization_text[idx][char_idx] and test_seq_normalization_text[idx][char_idx] != ' ':\n",
@@ -46511,7 +46511,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "5e5c4075",
+   "id": "8dd92cf7",
    "metadata": {},
    "outputs": [],
    "source": [
